Changed the HTML for the site

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,13 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        {% load static %}
+        <title>Tania's Django Blog</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Tania's Django Blog</a></h1>
         </div>
         {% for post in posts %}
         <div>
