--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,6 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        {% load static %}
-        <title>Tania's Django Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Tania's Django Blog</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
+
+{% block content %}
         {% for post in posts %}
         <div>
             <p>published: {{ post.published_date}}</p>
@@ -16,8 +8,4 @@
             <p>{{ post.text|linebreaksbr}}</p>
         </div>
         {% endfor %}
-        <div>
-           
-        </div>
-    </body>
-<html>
+ {% endblock %}  
