--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,9 +2,11 @@
 
 {% block content %}
         {% for post in posts %}
-        <div>
+        <div class="post">
+            <div class="date">
             <p>published: {{ post.published_date}}</p>
-            <h2><a href="">{{ post.title}}</a></h2>
+        </div>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title}}</a></h2>
             <p>{{ post.text|linebreaksbr}}</p>
         </div>
         {% endfor %}
